[2025-03-24 23:59:58]	No se encontró una version válida	Automatic update
[2025-03-25 17:00:20]	No se encontró una version válida	Version inestable
[2025-03-25 17:09:47]	No se encontró una version válida	Version inestable
[2025-03-25 20:17:50]	No se encontró una version válida	Version inestable
[2025-03-25 20:27:34]	No se encontró una version válida	Version inestable
[2025-03-25 20:42:24]	No se encontró una version válida	Version estable
[2025-03-26 20:58:51]	No se encontró una version válida	Calc layout mejorado