@@ -115,170 +115,79 @@
 
         <Button
             android:id="@+id/btn7"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="22sp"
+            style="@style/CalculatorButton"
             android:text="7" />
 
         <Button
             android:id="@+id/btn8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="8" />
 
         <Button
             android:id="@+id/btn9"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_rowWeight="1"
-            android:layout_column="2"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
+            style="@style/CalculatorButton"
             android:text="9"
             android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnClear"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="C" /> <!-- posibles "CＣ" -->
 
         <Button
             android:id="@+id/btn4"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="4" />
 
         <Button
             android:id="@+id/btn5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="5" />
 
         <Button
             android:id="@+id/btn6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="6" />
 
         <Button
             android:id="@+id/btnMultiply"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="✕" />
 
         <Button
             android:id="@+id/btn1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="1" />
 
         <Button
             android:id="@+id/btn2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="2" />
 
         <Button
             android:id="@+id/btn3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="3" />
 
         <Button
             android:id="@+id/btnAdd"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
+            style="@style/CalculatorButton"
             android:layout_rowSpan="2"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
             android:text="＋" />
 
         <Button
             android:id="@+id/btnDelete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="×" />
 
         <Button
             android:id="@+id/btn0"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="0" />
 
         <Button
             android:id="@+id/btnDot"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:padding="32dp"
-            android:layout_margin="1dp"
-            android:textSize="18sp"
+            style="@style/CalculatorButton"
             android:text="," />
 
     </GridLayout>
