@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="CalculatorButton">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">60dp</item>
-        <item name="android:layout_margin">4dp</item>
-        <item name="android:background">@android:color/white</item>
-        <item name="android:textColor">#333333</item>
-        <item name="android:textSize">24sp</item>
-    </style>
-
-    <style name="CalculatorFunctionButton">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">60dp</item>
-        <item name="android:layout_margin">4dp</item>
-        <item name="android:background">@color/gray</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_rowWeight">1</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:padding">32dp</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 </resources>
